k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        - name: frontend
          image: joma74/udemy-docker-k8s-tcg-2/fibonacci-calc/frontend/prod:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
