k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: joma74/udemy-docker-k8s-tcg/fibonacci-calc/worker/prod:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
