k8s/frontend-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip-service
spec:
  selector:
    component: frontend
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
