k8s/server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  selector:
    component: server
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
