k8s/worker-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: worker-cluster-ip-service
spec:
  selector:
    component: worker
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
